# pulse

./: .clippy.toml  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  build.rs  charger.circuit.tsx  index.circuit.tsx  justfile  memory.x  package.json  tscircuit.config.json
.cargo/: config.toml
.specs/: device.md  repo.md  specifics.md
imports/: .gitignore  ABS07_32_768KHZ_T.tsx  AP2112K_3_3TRG1.tsx  A_2450AT18B100E.tsx  BQ21061YFPR.tsx  DRV8212PDSGR.tsx  KSC241GLFS.tsx  L2N7002SLLT1G.tsx  LIS2DW12TR.tsx  MAX17048G_T10.tsx  MF_PSMF050X_2.tsx  NCP15XH103F03RC.tsx  NRF52840_QIAA_R.tsx  NX2016SA_32MHZ_STD_CZS_5.tsx  PESD5V0S1BBN.tsx  RP2040.tsx  SN74AXC1T45DCKR.tsx  TPD4E05U06DQAR.tsx  TPS2553DBVR.tsx  USBLC6_2P6.tsx  W25Q16JVSNIQ.tsx  X322512MSB4SI.tsx
src/: .gitignore  main.rs
tools/: .gitignore  uf2conv.nu
